--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,36 @@ h1, h2, h3 {
     font-size: 1.5rem;
 }
 header, footer {
-    background-color:white;
+    background-color:black;
     color: #DEC9E9;
+}
+
+.wrapper {
+    max-width: 940px;
+    margin: 0 auto;
+    padding: 2em;
+}
+ul, li{
+    padding: 0;
+    list-style: none;
+}
+nav > :link {
+    color: #DEC9E9;
+    text-decoration: none;
+}
+#intro + #fan-favorites {
+    background-color: black;
+    color: #DEC9E9;
+}
+article > img {
+    width: 150px;
+    border-radius:50%;
+    filter: grayscale(100%);
+    margin-top: 1em;
+}
+ol > li:nth-child(even) {
+    color: #dc33dc;
+}
+main > img {
+    width: 100%;
 }
